--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -24,8 +24,8 @@ body {
   padding: 0;
   margin: 0 auto;
   max-width: 100%;
-  font-family: Lato, sans-serif, Roboto, Arial;
-  font-weight: normal;
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", Helvetica,
+  Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";  font-weight: normal;
   -webkit-font-kerning: normal;
   font-kerning: normal;
   font-variant-numeric: lining-nums slashed-zero;
@@ -37,10 +37,21 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: geometricPrecision;
-
   background: url("/images/main-info_BG.png") top no-repeat;
   background-size: 100%;
   color: #ffffff;
+}
+
+.wf-active body {
+  font-family: Lato, sans-serif;
+}
+.tm-logo {
+  font-family: Futura, -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
+  Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+  "Segoe UI Symbol";
+}
+.wf-active .tm-logo {
+  font-family: futura-pt, sans-serif;
 }
 
 .tm-layout-wrapper {
