--- a/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
+++ b/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
@@ -9,7 +9,8 @@ body {
   padding: 0;
   margin: 0 auto;
   max-width: 100%;
-  font-family: Lato, Roboto, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", Helvetica,
+  Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";  font-weight: normal;
   font-weight: normal;
   -webkit-font-kerning: normal;
   font-kerning: normal;
@@ -26,7 +27,18 @@ body {
   background-position-x: 50%;
 }
 
-h1 {
+.wf-active body {
+  font-family: Lato, sans-serif;
+}
+.tm-logo {
+  font-family: Futura, -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
+  Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+  "Segoe UI Symbol";
+}
+.wf-active .tm-logo {
+  font-family: futura-pt, sans-serif;
+}
+  h1 {
   font-size: 36px;
   color: black;
   text-align: center;
