--- a/studio.topmonks.com/src/stylesheets/main.scss
+++ b/studio.topmonks.com/src/stylesheets/main.scss
@@ -69,7 +69,6 @@ section:target {
   color: #ff7a7e;
 }
 
-
 /*Main Info*/
 .opening {
   margin-top: 8em;
@@ -200,7 +199,7 @@ section:target {
   --mdc-layout-grid-gutter-tablet: 0;
   --mdc-layout-grid-gutter-phone: 0;
   img {
-  width: 100%;
+    width: 100%;
   }
 }
 
@@ -372,8 +371,8 @@ blockquote {
   text-align: center;
   padding: 64px 0 100px;
   background: #fff url("/images/bgnd_curve_2.svg") top -5px left calc(
-      50% - 530px
-    ) no-repeat;
+    50% - 530px
+  ) no-repeat;
   @media screen and (min-width: 480px) {
     background-position: top -1px left calc(50% - 360px);
   }
@@ -390,29 +389,26 @@ blockquote {
 
 #page-topmonks-index {
   @media screen and (max-width: 479px) {
-    background: #fff
-      url("https://res.cloudinary.com/topmonks/image/upload/w_352,dpr_auto,q_auto,f_auto/v1531754590/topmonks.com/bgnd_header_mobile.png")
-      no-repeat right calc(50% - 145px) top -1px;
+    background: #fff url("https://res.cloudinary.com/topmonks/image/upload/w_352,dpr_auto,q_auto,f_auto/v1531754590/topmonks.com/bgnd_header_mobile.png") no-repeat right calc(50% - 145px) top -1px;
     background-size: 352px auto;
     overflow-x: hidden;
   }
   @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2),
-    screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2),
-    screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1),
-    screen and (max-width: 479px) and (min-device-pixel-ratio: 2),
-    screen and (max-width: 479px) and (min-resolution: 192dpi),
-    screen and (max-width: 479px) and (min-resolution: 2dppx) {
+  screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2),
+  screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1),
+  screen and (max-width: 479px) and (min-device-pixel-ratio: 2),
+  screen and (max-width: 479px) and (min-resolution: 192dpi),
+  screen and (max-width: 479px) and (min-resolution: 2dppx) {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_352,dpr_2,q_auto,f_auto/v1531754590/topmonks.com/bgnd_header_mobile.png");
   }
   @media screen and (min-width: 480px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_auto,q_auto,f_auto/v1531486239/topmonks.com/bgnd_header.png")
-      no-repeat right calc(50% - 390px) top -1px;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_auto,q_auto,f_auto/v1531486239/topmonks.com/bgnd_header.png") no-repeat right calc(50% - 390px) top -1px;
     background-size: 1017px auto;
     overflow-x: hidden;
   }
   @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2),
-    screen and (min-width: 480px) and (min-resolution: 192dpi),
-    screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  screen and (min-width: 480px) and (min-resolution: 192dpi),
+  screen and (min-width: 480px) and (min-resolution: 2dppx) {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_2,q_auto,f_auto/v1531486239/topmonks.com/bgnd_header.png");
   }
   @media screen and (min-width: 480px) and (max-width: 839px) {
@@ -486,41 +482,37 @@ blockquote {
 
 .cooperation {
   background-image: url("/images/bgnd_product_top.svg"),
-    url("/images/bgnd_curve_1.svg");
+  url("/images/bgnd_curve_1.svg");
   background-repeat: no-repeat, no-repeat;
   background-position: bottom 0 left -800px, bottom -5px left calc(50% - 530px);
   @media screen and (min-width: 480px) {
     background-position: bottom -20px center,
-      bottom -120px left calc(50% - 400px);
+    bottom -120px left calc(50% - 400px);
   }
   h2 {
     margin-bottom: 260px;
   }
   .tm-bgnd-wrapper {
     @media screen and (max-width: 479px) {
-      background: transparent
-        url("https://res.cloudinary.com/topmonks/image/upload/w_440,dpr_auto,q_auto,f_auto/v1531486239/topmonks.com/bgnd_1.png")
-        no-repeat left -110px top 120px;
+      background: transparent url("https://res.cloudinary.com/topmonks/image/upload/w_440,dpr_auto,q_auto,f_auto/v1531486239/topmonks.com/bgnd_1.png") no-repeat left -110px top 120px;
       background-size: 440px auto;
     }
     @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2),
-      screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2),
-      screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1),
-      screen and (max-width: 479px) and (min-device-pixel-ratio: 2),
-      screen and (max-width: 479px) and (min-resolution: 192dpi),
-      screen and (max-width: 479px) and (min-resolution: 2dppx) {
+    screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2),
+    screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1),
+    screen and (max-width: 479px) and (min-device-pixel-ratio: 2),
+    screen and (max-width: 479px) and (min-resolution: 192dpi),
+    screen and (max-width: 479px) and (min-resolution: 2dppx) {
       background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_440,dpr_2,q_auto,f_auto/v1531486239/topmonks.com/bgnd_1.png");
     }
     @media screen and (min-width: 480px) {
-      background: transparent
-        url("https://res.cloudinary.com/topmonks/image/upload/w_695,dpr_auto,q_auto,f_auto/v1531486239/topmonks.com/bgnd_1.png")
-        no-repeat right calc(50% + 555px) top 140px;
+      background: transparent url("https://res.cloudinary.com/topmonks/image/upload/w_695,dpr_auto,q_auto,f_auto/v1531486239/topmonks.com/bgnd_1.png") no-repeat right calc(50% + 555px) top 140px;
       background-size: 695px auto;
       padding-bottom: 120px;
     }
     @media screen and (min-width: 840px) and (min-device-pixel-ratio: 2),
-      screen and (min-width: 840px) and (min-resolution: 192dpi),
-      screen and (min-width: 840px) and (min-resolution: 2dppx) {
+    screen and (min-width: 840px) and (min-resolution: 192dpi),
+    screen and (min-width: 840px) and (min-resolution: 2dppx) {
       background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_695,dpr_2,q_auto,f_auto/v1531486239/topmonks.com/bgnd_1.png");
     }
   }
@@ -579,6 +571,7 @@ blockquote {
     svg {
       height: 217px;
       width: 187px;
+      margin-top: 2em;
     }
     h2 {
       text-align: center;
@@ -606,8 +599,35 @@ blockquote {
   #contacts p {
     padding: 24px;
   }
+  .portfolio {
+    p {
+      width: 280px;
+    }
+    .portfolio-text {
+      margin: 0 auto;
+    }
+    .order1 {
+      order: 1;
+    }
+    .order2 {
+      order: 2;
+    }
+    .order3 {
+      order: 3;
+    }
+    .order4 {
+      order: 4;
+    }
+    .order5 {
+      order: 5;
+    }
+    .order6 {
+      order: 6;
+    }
+  }
 }
-@media (max-width: 480px){
+
+@media (max-width: 480px) {
   body {
     background: url("/images/mobile_bg.jpg") top center no-repeat;
     background-size: 100%;
@@ -624,7 +644,31 @@ blockquote {
   .pitch_us .box4 {
     border-top: 1px solid #d5e9ff;
   }
+  .portfolio {
+    .order1 {
+      order: 1;
+    }
+    .order2 {
+      order: 3;
+    }
+    .order3 {
+      order: 2;
+    }
+    .order4 {
+      order: 4;
+    }
+    .order5 {
+      order: 5;
+    }
+    .order6 {
+      order: 7;
+    }
+  }
+  #team {
+    display: none;
+  }
 }
+
 @media (min-width: 320px) {
   .mail form input[type="email"] {
     padding: 12px 60px 12px 24px;
