--- a/studio.topmonks.com/src/stylesheets/main.scss
+++ b/studio.topmonks.com/src/stylesheets/main.scss
@@ -243,6 +243,7 @@ section:target {
   svg {
     margin-top: 4em;
   }
+
 }
 
 /*Team*/
@@ -251,6 +252,13 @@ section:target {
   height: 802px;
   background: url("/images/team.jpg") no-repeat;
   background-size: 100%;
+  position: relative;
+  .pink-title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 20%;
+  }
 }
 
 .team_member {
@@ -258,6 +266,7 @@ section:target {
   background-color: #ffffff;
   padding: 4px 8px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  position: absolute;
   h4,
   p {
     margin: 0;
@@ -271,9 +280,27 @@ section:target {
   }
 }
 
+  .member-fil {
+    left: 6%;
+    top: 4%;
+  }
+  .member-linh {
+    left: 30%;
+    bottom: 30%;
+  }
+  .member-janko {
+    right: 33%;
+    top: 10%;
+  }
+  .member-jiri{
+    right: 4%;
+    top: 6%;
+  }
+
+
 /*Blog*/
 #blog {
-  margin: 2em 0 6em;
+  margin: 2em 0 7em;
   .blog_middle-box {
     box-shadow: 0 0 20px #d3cdcd;
   }
@@ -288,6 +315,9 @@ section:target {
 
 #about {
   --mdc-layout-grid-gutter-phone: 0;
+  .pink-title {
+    transform: translateY(-2.5em);
+  }
   .white-box {
     padding: 10px 24px;
   }
@@ -333,6 +363,16 @@ section:target {
     font-size: 15px;
     color: #ffffff;
     line-height: 1.3;
+  }
+  .button_transparent {
+    a {
+      color: #6E70FB;
+    }
+    a:hover {
+      background-color: transparent;
+      border: 3px solid #FFFFFF;
+      color: #FFFFFF;
+    }
   }
 }
 
@@ -560,6 +600,11 @@ blockquote {
   #blog {
     margin: 1em 0 2em;
   }
+  #about {
+    .pink-title {
+      transform: translateY(0em);
+    }
+  }
   .network_icon {
     margin: 0 auto;
   }
@@ -576,9 +621,6 @@ blockquote {
     h2 {
       text-align: center;
     }
-  }
-  #team {
-    height: auto;
   }
 
   #idea {
