--- a/studio.topmonks.com/src/stylesheets/typography.scss
+++ b/studio.topmonks.com/src/stylesheets/typography.scss
@@ -1,15 +1,3 @@
-:root {
-  --insight-negative-color: #e13c1e;
-  --insight-positive-color: #7e9204;
-  --topmonks-orange: #fe664b;
-  --topmonks-grey: #9b9b9b;
-  --topmonks-article-background: #f8fbfc;
-  --topmonks-black: #4a4a4a;
-}
-
-/*
-http://pxtoem.com/ - how to count px to em
-*/
 
 body {
   color: #000;
@@ -17,7 +5,7 @@ body {
   padding: 0;
   font-size: 18px;
   letter-spacing: 0;
-  line-height: 1.444em; //22/26px
+  line-height: 1.555em;
   font-family: Lato, sans-serif, BlinkMacSystemFont, Roboto, "Segoe UI",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
@@ -94,5 +82,4 @@ a.button_filled {
     line-height: 1.1em;
     padding: 0 0.5em;
   }
-
 }
