--- a/studio.topmonks.com/src/stylesheets/header.scss
+++ b/studio.topmonks.com/src/stylesheets/header.scss
@@ -152,6 +152,9 @@
     }
     .tm-navigation-bar {
       transform: translateY(0);
+      padding-left: 0;
+      width: calc(100vw - 32px);
+      max-width: 980px;
     }
   }
 }
@@ -215,10 +218,15 @@
 .tm-menu--horizontal .tm-menu__list {
   display: flex;
   align-items: flex-start;
-  justify-content: flex-end;
+  justify-content: flex-start;
   margin: 0;
   list-style-type: none;
   padding-left: 0;
+}
+
+.tm-menu--horizontal.navigation-right .tm-menu__list {
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .tm-menu--horizontal .tm-menu__list a {
