Blockchain offer section padding

--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -523,7 +523,7 @@ footer .social-buttons {
   main {
     background: url("/images/main-info_BG.png") top no-repeat;
   }
-  .our-work, .offer, .references {
+  .our-work, .references {
     padding: 24px;
   }
 
