--- a/www.topmonks.com/src/html/layouts/topmonks.html
+++ b/www.topmonks.com/src/html/layouts/topmonks.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="cs" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# business: http://ogp.me/ns/business#">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -24,10 +25,9 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <script>WebFontConfig = { typekit: {id: 'her1ktw'}, async: true }</script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer
-          integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
-          crossorigin="anonymous"></script>
+  <script>WebFontConfig = { typekit: { id: 'her1ktw' }, async: true }</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
+    crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="/stylesheets/typography.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
@@ -36,18 +36,21 @@
   {% include "shared/app-icons.html" %}
   {% include 'shared/analytics.html' %}
 </head>
+
 <body id="page-{{page}}">
 
-{% include 'shared/header.html' %}
+  {% include 'shared/header.html' %}
 
-<main>
-  {% block content %}{% endblock %}
-</main>
+  <main>
+    {% block content %}{% endblock %}
+  </main>
 
-{% include 'shared/footer.html' %}
+  {% include 'shared/footer.html' %}
 
-{% block javascript %}
-{% endblock %}
+  <script src="/js/app.js"></script>
+  {% block javascript %}
+  {% endblock %}
 
 </body>
+
 </html>
